fix: reduce input max length (auth form) and prevent user's nickname text overflow

--- a/src/widgets/header/ui/Header/Header.module.scss
+++ b/src/widgets/header/ui/Header/Header.module.scss
@@ -31,6 +31,7 @@
   @include fluid-text(25, 16);
 
   text-align: end;
+  overflow-wrap: anywhere;
 }
 
 .appActions {
